--- a/app/templates/location/_gallery.html
+++ b/app/templates/location/_gallery.html
@@ -1,4 +1,6 @@
 {% from '_helpers.html' import link_button %}
+
+{% if location.has_photos() %}
 <div class="card content-card">
     <div class="card-header">
         {{ _('Gallery') }}
@@ -28,3 +30,4 @@
         {% endfor %}
     </div>
 </div>
+{% endif %}
