--- a/app/templates/location/photo.html
+++ b/app/templates/location/photo.html
@@ -1,14 +1,16 @@
+{% if location %}
+    {% set title=_('Add photo for %(name)s', name=location.name) %}
+{% else %}
+    {% set title=_('Edit photo') %}
+{% endif %}
+
 {% extends "_private.html" %}
 {% from '_helpers.html' import render_field, link_button %}
 
 {% block content %}
 <div class="card">
     <h4 class="card-header">
-        {% if location %}
-        {{ _('Add photo for') }} {{ location.name }}
-        {% else %}
-        {{ _('Edit photo') }}
-        {% endif %}
+        {{ title }}
     </h4>
     <div class="card-body">
         <form method="POST" action="" role="form" enctype="multipart/form-data">
