--- a/app/templates/location/location.html
+++ b/app/templates/location/location.html
@@ -3,19 +3,18 @@
 {% from '_helpers.html' import link_button, render_field %}
 
 {% block content %}
-
 <div class="row justify-content-between">
     <div class="col-auto">
         <h1>
             {{ location.name }}
             {% if location.parent %}
-            (<a href="{{ url_for('location.show', id=location.parent.id) }}">{{ location.parent.name }}</a>)
+            (<a href="{{ url_for('location.show', location_id=location.parent.id) }}">{{ location.parent.name }}</a>)
             {% endif %}
             {% if not location.published %}
-            <span class="text-danger">Not published</span>
+            <span class="text-danger">{{ _('Not published') }}</span>
             {% endif %}
         </h1>
-        <h3>{{ location.type }}, {{ location.accessibility }}</h3>
+        <h3>{{ location.underground.type or location.urbex.type }}, {{ location.underground.accessibility or location.urbex.accessibility }}</h3>
         <small clas="text-muted">
             <i class="bi bi-geo-alt"></i>
             {{ location.latitude }} {{ location.longitude }}
@@ -28,7 +27,7 @@
                     <i class="bi bi-star"></i>
                 </button>
                 <ul class="dropdown-menu shadow" aria-labelledby="dropdownBookmarks">
-                    {% for bookmark in bookmarks %}
+                    {% for bookmark in get_bookmarks() %}
                         {% if location in bookmark.locations %}
                             {{ dropdown_link(bookmark.name, 'star-fill', url_for_return('location.bookmark_remove', bookmarks_id=bookmark.id, location_id=location.id)) }}
                         {% else %}
@@ -45,7 +44,7 @@
                     </li>
                 </ul>
             </div>
-            {{ link_button(_('Edit'), url_for_return('location.edit', id=location.id), 'pencil', 'outline-success') }}
+            {{ link_button(_('Edit'), url_for_return('location.edit', location_id=location.id), 'pencil', 'outline-success') }}
             {{ link_button(_('Document'), url_for_return('location.document_add', location_id=location.id), 'file-earmark-plus', 'outline-success') }}
             {{ link_button(_('Photo'), url_for_return('location.photo_add', location_id=location.id), 'camera-fill', 'outline-success') }}
             {{ link_button(_('Link'), url_for_return('location.link_add', location_id=location.id), 'link', 'outline-success') }}
@@ -87,29 +86,28 @@
                 {{ _('Related places') }}
             </div>
             <div class="list-group list-group-flush">
+                {% for child in location.children %}
                 <a href="#" class="list-group-item list-group-item-action">
-                    <strong>Horní štola</strong>
+                    <strong>{{ child.name }}</strong>
+                    <p class="mb-0 text-muted text-truncate">{{ child.description }}</p>
                 </a>
-                <a href="#" class="list-group-item list-group-item-action">
-                    <strong>Spodní štola</strong>
-                    <p class="mb-0 text-muted">Spodní štola byla vyražena...</p>
-                </a>
+                {% endfor %}
             </div>
         </div>
         {% endif %}
 
-        {% if location.geofond_id or (location.links | length) %}
+        {% if location.underground.geofond_id or (location.links | length) %}
         <div class="card content-card">
             <div class="card-header">
                 {{ _('Links') }}
             </div>
             <div class="list-group list-group-flush">
-                {% if location.geofond_id %}
-                <a href="https://app.geology.cz/dud/php/foto_dd.php?id_={{ location.geofond_id }}" class="list-group-item list-group-item-action">
-                    <strong>Geofond - foto</strong>
+                {% if location.underground.geofond_id %}
+                <a href="https://app.geology.cz/dud/php/foto_dd.php?id_={{ location.underground.geofond_id }}" class="list-group-item list-group-item-action">
+                    <strong>{{ _('Geofond - photos') }}</strong>
                 </a>
-                <a href="https://mapy.geology.cz/dulni_dila_poddolovani/?query=dulni_dila_4034_0%2Cid_dd%2C{{ location.geofond_id }}" class="list-group-item list-group-item-action">
-                    <strong>Geofond - informace</strong>
+                <a href="https://mapy.geology.cz/dulni_dila_poddolovani/?query=dulni_dila_4034_0%2Cid_dd%2C{{ location.underground.geofond_id }}" class="list-group-item list-group-item-action">
+                    <strong>{{ _('Geofond - info') }}</strong>
                 </a>
                 {% endif %}
                 {% for link in location.links %}
