--- a/app/templates/page/contact.html
+++ b/app/templates/page/contact.html
@@ -1,23 +1,16 @@
+{% set title=_('Contact admins') %}
 {% extends '_private.html' %}
-{% from "_helpers.html" import render_label, render_submit %}
+{% from "_helpers.html" import render_field, render_submit %}
 
 {% block content %}
 <div class="card content-card">
-    <h2 class="card-header">{{ _('Contact Admins') }}</h2>
+    <h2 class="card-header">{{ title }}</h2>
     <div class="card-body">
         <form method="POST" action="" role="form" method="POST">
             {{ form.hidden_tag() }}
 
-            <div class="form-group">
-                {{ render_label(form.subject, 'card-text') }}
-                {{ form.subject(class_="form-control", placeholder=_('Subject')) }}
-            </div>
-
-            <div class="form-group">
-                {{ render_label(form.text, 'pencil') }}
-                {{ form.text(class_="form-control", placeholder=_('Your message')) }}
-            </div>
-
+            {{ render_field(form.subject, 'card-text', placeholder=_('Subject')) }}
+            {{ render_field(form.text, 'pencil', placeholder=_('Your message')) }}
             <div class='text-end mt-2'>
                 {{ form.submit(class="btn btn-success") }}
             </div>
