--- a/app/templates/page/edit.html
+++ b/app/templates/page/edit.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <div class="card content-card">
-    <h2 class="card-header">{{ _('Edit page') }} {{ page_name }}</h2>
+    <h2 class="card-header">{{ _('Edit page %(name)s', name=title) }}</h2>
     <div class="card-body">
         <form method="POST" action="" role="form" method="POST">
             {{ form.hidden_tag() }}
@@ -12,7 +12,7 @@
                 {{ render_label(form.text, 'pencil') }}
                 {{ form.text(class_="form-control", style="min-height: 30em", placeholder=_('Page content')) }}
                 <div class="form-text">
-                    {{ _('Supports markdown formatting, check the ') }}<a href="https://www.markdownguide.org/basic-syntax/">{{ _('syntax') }}</a>
+                    {{ _('Supports markdown formatting, check the') }}<a href="https://www.markdownguide.org/basic-syntax/">{{ _('syntax') }}</a>
                 </div>
             </div>
 
