--- a/app/templates/page/page.html
+++ b/app/templates/page/page.html
@@ -4,11 +4,11 @@
 {% block content %}
 <div class="card content-card">
     <div class="card-header d-flex justify-content-between align-items-center">
-        <h2>{{ page_title }}</h2>
-        {{ link_button(_('Edit'), page_edit_url, 'pencil', 'warning') }}
+        <h2>{{ title }}</h2>
+        {{ link_button(_('Edit'), edit_url, 'pencil', 'warning') }}
     </div>
     <div class="card-body">
-        {{ page_content | markdown }}
+        {{ content | markdown }}
     </div>
 </div>
 {% endblock %}
