--- a/app/templates/user/login.html
+++ b/app/templates/user/login.html
@@ -14,6 +14,6 @@
     {{ render_field(form.remember_me) }}
     {{ form.submit(class_="btn btn-primary mb-3 w-100 btn-lg") }}
 
-    <a href="{{ url_for('user.reset_password') }}">{{ _('Forgot password?') }}</a>
+    <a href="{{ url_for_return('user.reset_password') }}">{{ _('Forgot password?') }}</a>
 </form>
 {% endblock %}
