Added support for emails, use jwt tokens for invitation and password reset

--- a/app/templates/user/forgotten_password.html
+++ b/app/templates/user/forgotten_password.html
@@ -1,4 +1,4 @@
-{% set title=_('Reset forgotten password') %}
+{% set title=_('Request password reset') %}
 {% extends '_public.html' %}
 {% from "_helpers.html" import render_floating_field %}
 
@@ -8,8 +8,7 @@
     <h1 class="h2 mb-3 fw-bold">{{ title }}</h1>
 
     {{ form.hidden_tag() }}
-    {{ render_floating_field(form.password, placeholder=form.password.label.text) }}
-    {{ render_floating_field(form.confirm, placeholder=form.confirm.label.text) }}
+    {{ render_floating_field(form.email, placeholder='name@example.com') }}
     {{ form.submit(class_="btn btn-primary mb-3 w-100 btn-lg") }}
 </form>
 {% endblock %}
