--- a/app/templates/_base.html
+++ b/app/templates/_base.html
@@ -49,6 +49,7 @@
     <script src="{{ url_for('static', filename='js/bootstrap.bundle.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/dselect.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/bs5-lightbox.min.js') }}"></script>
+    {{ moment.include_moment() }}
     <script src="{{ url_for('static', filename='js/custom.js') }}"></script>
 </body>
 </html>
